--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,9 @@
 // COLORS
 $color-black: #000;
-$color-white: #ffffff;
-$color-red: #ff0000;
-$color-orange: #F3C934;
+$color-white: #fff;
+$color-red: #f00;
+$color-orange: #f3c934;
+
 // FONTS
 $font-primary: "Gilroy", Arial, sans-serif;
 
