--- a/src/components/questions/questions.pug
+++ b/src/components/questions/questions.pug
@@ -1,25 +1,19 @@
 mixin questions()
-    .questions
-        .container
-            .questions__title
-                h2.h2 Остались вопросы? Оставьте данные и мы перезвоним
-            .questions__feelds
-                .questions__feelds_name
-                    input(tupe="text" placeholder="Ваше имя")
-                .questions__feelds_namber
-                    input(tupe="tel" placeholder="Номер телефона")
-                .questions__feelds_send
-                    +button("Отправить", "#")
-            .questions__social
-                .questions__social_pfone
-                    +svg("pfone")
-                    p.for-desktop или позвоните нам по номеру
-                    a(href="#").for-desktop +7(495) 331 33 67
-                    p.for-devices или позвоните нам по номеру +7(495) 331 33 67
-                .questions__social_watsup
-                    +svg("whatsapp")
-                    a(href="#") Мы в WhatsApp
-
-
-
-
+	.questions
+		.container
+			.questions__title
+				h2 Остались вопросы? Оставьте данные и мы перезвоним
+			.questions__feelds
+				.questions__feelds_name
+					input(type="text" placeholder="Ваше имя")
+				.questions__feelds_namber
+					input(type="phone" placeholder="Номер телефона")
+				.questions__feelds_send
+					+button("Отправить", "#")
+			.questions__social
+				.questions__social-item
+					+svg("pfone")
+					p или позвоните нам по номеру #[a(href="#") +7(495) 331 33 67]
+				.questions__social-item.whatsapp
+					+svg("whatsapp")
+					a(href="#") Мы в WhatsApp
