--- a/src/pages/page6.pug
+++ b/src/pages/page6.pug
@@ -20,7 +20,7 @@ block content
     +header()
     main
         +links()
-        +home-video()
+        +product-info()
         +cases()
         +advantages()
         +questions()
