--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -1,101 +1,91 @@
 .review {
-    position: relative;
+	position: relative;
+	padding-bottom: vc(60);
 
-    &__infos {
-        background: #1E1516;
-        box-shadow: 0 0 vc(14) rgba(0, 0, 0, 0.15);
-        border-radius: vc(10);
+	&__infos {
+		border-radius: vc(10);
+		box-shadow: 0 0 vc(14) rgba(0, 0, 0, 0.15);
+		background: #1e1516;
 
-        &_img1 {
-            position: absolute;
-            top: vc(15);
-            left: vc(160);
+		&_img1 {
+			position: absolute;
+			left: 50%;
+			top: vc(15);
+			transform: translateX(-50%);
+		}
 
-            @include devices {
-                left: vc(145);
-            }
-        }
+		&_img2 {
+			position: absolute;
+			left: 50%;
+			bottom: vc(25);
+			overflow: hidden;
+			border-radius: 100%;
+			width: vc(58);
+			height: vc(58);
+			transform: translateX(-50%);
 
-        &_svg2 {
-            position: absolute;
-            top: vc(127);
-            left: vc(0);
-            z-index: -1;
+			@include devices {
+				bottom: vc(15);
+			}
+		}
 
-            @include devices {
-                top: vc(180);
-                left: vc(25);
-            }
+		&_svg2 {
+			position: absolute;
+			left: 49%;
+			bottom: vc(-15);
+			z-index: -1;
+			transform: translateX(-50%);
 
-            svg {
-                fill: #1E1516;
-            }
-        }
+			svg {
+				fill: #1e1516;
+			}
 
-        &_info {
-            padding: vc(38) vc(33) vc(18) vc(33);
+			@include devices {
+				bottom: vc(-20);
+			}
+		}
 
-            p {
-                font-weight: 400;
-                font-size: vc(13);
-                line-height: vc(18);
-                text-align: center;
-                color: $color-white;
+		&_info {
+			display: flex;
+			flex-direction: column;
+			padding: vc(38) vc(33);
+			gap: vc(20);
 
-                @include devices {
+			p {
+				font-size: vc(14);
+				line-height: vc(21);
+				text-align: center;
+			}
 
-                }
-            }
+			h3 {
+				position: relative;
+				display: inline-flex;
+				align-self: center;
+				font-weight: 700;
+				font-size: vc(16);
+				line-height: vc(22);
+				text-align: center;
+				color: $color-white;
 
-            h3 {
-                font-weight: 700;
-                font-size: vc(16);
-                line-height: vc(22);
-                text-align: center;
-                color: $color-white;
-                padding-top: vc(19);
-                padding-bottom: vc(54);
+				&::before,
+				&::after {
+					content: '';
+					position: absolute;
+					top: 50%;
+					width: vc(10);
+					height: vc(1);
+					background-color: #29aae3;
+					transform: translateY(-50%);
+				}
 
-                &::before {
-                    content: '';
-                    width: vc(10);
-                    height: vc(1);
-                    background-color: #29AAE3;
-                    position: absolute;
-                    top: vc(175);
-                    left: vc(110);
+				&::before {
+					right: vc(-25);
+				}
 
-                    @include devices {
-                        left: vc(95);
-                        top: vc(193);
-                    }
-                }
-
-                &::after {
-                    content: '';
-                    width: vc(10);
-                    height: vc(1);
-                    background-color: #29AAE3;
-                    position: absolute;
-                    top: vc(175);
-                    left: vc(253);
-
-                    @include devices {
-                        top: vc(193);
-                    }
-                }
-            }
-        }
-
-        &_img2 {
-            position: absolute;
-            top: vc(230);
-            left: vc(158);
-
-            @include devices {
-                top: vc(250);
-                left: vc(145);
-            }
-        }
-    }
+				&::after {
+					left: vc(-25);
+				}
+			}
+		}
+	}
 }
