--- a/src/components/reviews/reviews.pug
+++ b/src/components/reviews/reviews.pug
@@ -1,16 +1,21 @@
 mixin reviews()
-    .reviews
-        .container
-            .reviews__title
-                h2.h2 Отзывы клиентов
-            .reviews__infos.for-desktop
-                +review()
-                +review()
-                +review()
-            .reviews__info.for-devices
-                +review()
-            .reviews__markers.for-devices
-                .reviews__markers_marker
-                .reviews__markers_marker
-                .reviews__markers_marker
-                .reviews__markers_marker
+	.reviews
+		.container
+			.reviews__title
+				h2.h2 Отзывы клиентов
+			.reviews__infos
+				.swiper
+					.swiper-wrapper
+						.swiper-slide
+							+review()
+						.swiper-slide
+							+review()
+						.swiper-slide
+							+review()
+						.swiper-slide
+							+review()
+				.reviews__markers
+					.reviews__markers_marker
+					.reviews__markers_marker
+					.reviews__markers_marker
+					.reviews__markers_marker
