--- a/src/components/reviews/reviews.scss
+++ b/src/components/reviews/reviews.scss
@@ -1,49 +1,39 @@
 .reviews {
-    margin-bottom: vc(110);
-    margin-top: vc(100);
+	margin-top: vc(100);
+	margin-bottom: vc(110);
 
-    @include devices {
-        margin-top: vc(40);
-        margin-bottom: vc(0);
-    }
+	&__title {
+		margin-bottom: vc(30);
 
-    &__title {
-        margin-bottom: vc(30);
+		.h2 {
+			@include devices {
+				width: 100%;
+			}
+		}
+	}
 
-        .h2 {
-            @include devices {
-                width: 100%;
-            }
-        }
-    }
+	@include devices {
+		margin-top: vc(40);
+		margin-bottom: vc(0);
+	}
 
-    &__infos {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        justify-content: space-between;
-        gap: vc(22);
+	@include devices {
+		&__markers {
+			display: flex;
+			justify-content: center;
+			margin-top: vc(80);
+			gap: vc(10);
 
-        &__infos {
-            @include devices {
-                display: block;
-            }
-        }
-    }
+			&_marker {
+				border-radius: 100%;
+				width: vc(12);
+				height: vc(12);
+				background-color: $color-white;
 
-    @include devices {
-        &__markers {
-            margin-top: vc(80);
-            display: flex;
-            justify-content: center;
-            gap: vc(10);
-
-            &_marker {
-                width: vc(12);
-                height: vc(12);
-                border-radius: 100%;
-                background-color: $color-white;
-            }
-        }
-    }
+				&-active {
+					background-color: #f3c934;
+				}
+			}
+		}
+	}
 }
-
