--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -14,11 +14,10 @@ append vars
 
     each metaValue, metaKey in data.general.meta
         - meta[metaKey] = metaValue
-    - body.classList = 'bg-image catalog'
 
 block content
     +header()
-    main
+    main.bg-image.catalog
         +links()
         +names-category()
     +footer()
