--- a/src/pages/page3.pug
+++ b/src/pages/page3.pug
@@ -27,7 +27,7 @@ block content
 		})
 		+cases()
 		+advantages()
-		+beginning()
+		//+beginning()
 		+reviews()
 		+about-service({
 			title: "О этой услуге",
