--- a/src/components/product-info/product-info.scss
+++ b/src/components/product-info/product-info.scss
@@ -1,16 +1,21 @@
 .product-info {
+	position: relative;
 	margin: vc(40) 0 vc(60);
 
 	&__row {
+		position: relative;
 		display: grid;
-		grid-template: auto 2fr / 1fr 1fr;
+		grid-template: auto 2fr / minmax(0, auto) minmax(0, auto);
 		grid-template-areas:
 			"img title"
 			"img info";
+		overflow: hidden;
+		width: 100%;
+		max-width: 100%;
 		gap: vc(30) vc(50);
 
 		@include devices {
-			grid-template: 1fr / 1fr;
+			grid-template: minmax(0, auto) / minmax(0, auto);
 			grid-template-areas:
 				"title"
 				"img"
@@ -23,39 +28,61 @@
 		grid-area: img;
 
 		&_main {
+			position: relative;
 			margin-bottom: vc(21);
 
-			img {
+			.image {
+				overflow: hidden;
 				border: vc(3) solid #1d0b0b;
 				border-radius: vc(20);
-				width: vc(615);
-				height: vc(406);
-				background: #312323;
+			}
 
-				@include devices {
-					width: vc(360);
-					height: vc(238);
-				}
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
 			}
 		}
 
 		&_secondary {
+			position: relative;
 			display: flex;
-			gap: vc(14);
+			width: calc(100% + #{vc(15)});
 
-			img {
+			.swiper {
+				width: 100%;
+
+				&-slide {
+					opacity: 0.5;
+					transition: opacity $transition;
+
+					&-thumb {
+						&-active {
+							opacity: 1;
+						}
+					}
+				}
+			}
+
+			.image {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				overflow: hidden;
+				margin-right: vc(15);
 				border: vc(3) solid #1d0b0b;
 				border-radius: vc(20);
-				width: vc(159);
 				height: vc(105);
-				background: #312323;
-				object-fit: cover;
+
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
 
 				@include devices {
 					border: vc(2) solid #1d0b0b;
 					border-radius: vc(5);
-					width: vc(109);
-					height: vc(72);
 				}
 			}
 		}
