--- a/src/pages/page6.pug
+++ b/src/pages/page6.pug
@@ -14,11 +14,10 @@ append vars
 
     each metaValue, metaKey in data.general.meta
         - meta[metaKey] = metaValue
-    - body.classList = 'bg-image category-page'
 
 block content
     +header()
-    main
+    main.bg-image.bg-image--page
         +links()
         +product-info()
         +cases()
